--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ p {
 
 /***задає стилі студія,портфоліо,контакти***/
 .header-link {
-  height: 16px;
+  font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
   color: #212121;
@@ -118,7 +118,7 @@ p {
   left: 0;
   width: 100%;
   position: absolute;
-  top: 50px;
+  top: 45px;
 }
 
 .link {
@@ -201,7 +201,6 @@ p {
   height: 50px;
   left: 692px;
   top: 430px;
-  display: flex;
 
   font-weight: 700;
   font-size: 16px;
@@ -212,6 +211,8 @@ p {
 
   display: flex;
   cursor: pointer;
+  border-color: #2196f3;
+  border-radius: 4px;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   margin: 0 auto;
@@ -271,16 +272,6 @@ p {
 .descrip-icon:hover {
   fill: #2196f3;
 }
-
-.emphasis:focus,
-.emphasis:hover {
-  text-decoration: underline 3px solid #2196f3;
-}
-
-.frame:hover {
-  outline: 3px solid #2196f3;
-}
-
 /****************ABOUT**************/
 .about {
   width: 1170px 0px;
